# tech_task_funtech

./: .env.template  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
app/: __init__.py  main.py
app/auth/application/: dtos.py  exceptions.py  use_cases.py
app/auth/domain/: entities.py  specifications.py
app/auth/domain/interfaces/: token_auth_provider.py
app/auth/infrastructure/services/: jwt.py
app/auth/presentation/: exceptions.py
app/auth/presentation/api/: dependancies.py  permissions.py
app/core/: app.py  exceptions.py  logging.py  models.py  settings.py
app/core/application/: dtos.py  exceptions.py  use_cases.py
app/core/domain/: entities.py  exceptions.py  specifications.py
app/core/domain/interfaces/: cache.py  unit_of_work.py
app/core/infrastructure/: exceptions.py
app/core/infrastructure/broker/: taskiq.py
app/core/infrastructure/cache/: client.py  redis.py
app/core/infrastructure/db/: database.py  repositories.py  unit_of_work.py
app/core/presentation/: exeptions.py
app/core/presentation/api/: dependencies.py  exception_handlers.py  routers.py
app/orders/application/: dtos.py  use_cases.py
app/orders/domain/: entities.py  specification.py
app/orders/domain/interfaces/: repositories.py
app/orders/infrastructure/broker/: tasks.py
app/orders/infrastructure/db/: models.py  repositories.py
app/orders/presentation/api/: dependencies.py
app/users/application/: dtos.py  exceptions.py  use_cases.py
app/users/domain/: entities.py  specifications.py
(+13 files in other folders)
